--- a/src/index.css
+++ b/src/index.css
@@ -34,3 +34,20 @@ code {
 .flag{
   outline: none;
 }
+
+.number {
+  position: absolute;
+  transform: translateX(-50%); 
+  left: 50%;
+  top: 40px;
+  color: #fff;
+}
+
+.number:nth-child(2) {
+  top: 70px;
+}
+
+
+.number:nth-child(3) {
+  top: 100px;
+}
